# Fuseprobe

./: .gitignore  CHANGELOG.md  COMMERCIAL-USE.md  Cargo.toml  LICENSE  README.md  fuseprobe_theme.py  main.py  nano_theme.py  version.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-desktop.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: delete_history_entry.toml  load_history.toml  load_security_settings.toml  send_request.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs  paths.rs  state.rs
apps/desktop/src-tauri/src/commands/: history.rs  mod.rs  request.rs  settings.rs
apps/desktop/src-tauri/tests/: security_config.rs
crates/fuseprobe-core/: Cargo.toml
crates/fuseprobe-core/src/: formatting.rs  history.rs  lib.rs  network_policy.rs  redaction.rs  request.rs  settings.rs  validation.rs
crates/fuseprobe-core/tests/: core_smoke.rs  formatting.rs  history_store.rs  request_execution.rs  settings_store.rs  validation_redaction.rs
docs/: usage-and-security.md
docs/plans/: 2026-03-10-hardening-and-architecture-roadmap-design.md  2026-03-10-ui-direction-mockup.html  2026-03-11-ui-direction-mockup-react.html  (+6 more)
src/: __init__.py  logic.py  presets.py  ui.py
tests/: __init__.py  test_history_store.py  test_logic.py  test_request_service.py  test_response_formatter.py  test_ui_smoke.py
(+36 files in other folders)
