[package]
name = "fuseprobe-core"
version = "3.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.8"

[dev-dependencies]
tiny_http = "0.12.0"
