[package]
name = "fuseprobe-desktop"
version = "3.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dirs = "6.0.0"
fuseprobe-core = { path = "../../../crates/fuseprobe-core" }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }

[dev-dependencies]
serde_json = "1.0.145"

[lib]
name = "fuseprobe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
